<resources>
    <string name="app_name">Lee</string>

    <!--    Login & Registration-->
    <string name="h_login">Login</string>
    <string name="h_sigin">SignIn</string>
    <string name="btn">Submit</string>
    <string name="age">Enter Your Age</string>
    <string name="activity">Enter the Activity</string>
    <string name="address">Enter Your Address</string>
    <string name="name">Enter Your Name</string>
    <string name="ph_no">Enter Your Phone Number</string>
    <string name="mail">Enter Your MailID</string>
    <string name="pass">Enter Your Password</string>
    <string name="already_user">Already Have Account</string>
    <string name="new_user">New User?</string>

    <!--    Splash Screen-->
    <string name="sp_nxt_btn">Next</string>
    <string name="sp_nxt_btn_ch">Enter</string>
    <string name="sp_prev_btn">Previous</string>
    <string name="skip_button_text">Skip</string>
    <string name="sp_title1">Top 10 Position in Chennai</string>
    <string name="sp_desc1">Consecutive Training and determination for better Future Stars</string>
    <string name="sp_title2">Determination Development  Discipline</string>
    <string name="sp_desc2">We cultivate the Essential 3d\'s on Students as part to Coaching </string>
    <string name="sp_title3">Wide Range of Sports</string>
    <string name="sp_desc3">We Offer Various Sports with Better quality to students And better assurance to parents </string>
    <string name="Sp_cricket">cricket</string>
    <string name="Sp_soccer">soccer</string>
    <string name="Sp_throwball">ThrowBall</string>
    <string name="Sp_badminton">Badminton</string>
    <string name="Sp_hockey">Hockey</string>
    <string name="Sp_volleyball">VolleyBall</string>


    <string name="select_activity">select Your Activity</string>
    <string name="error_mail">Enter Your Correct Mail Address</string>
    <string name="error_pass">Enter The Correct Password</string>
    <string name="s_gender">Enter Your Gender</string>
    <string name="s_btn_signup">Signup</string>
    <string name="hm_explore">Explore</string>
    <string name="cric_desc">Cricket embodies the triumph of spirit and skill. It\'s a sport that unites, inspires discipline, and celebrates teamwork. Every match is a testament to dedication, where players and fans alike share a fervent passion for every run scored and wicket taken, igniting aspirations worldwide.</string>
    <string name="coach1">Vinoth</string>
    <string name="hock_desc">Hockey helps Develop leadership skills, discipline and teamwork in the players. Being a team player is essential in any sport and hockey is no exception. The sport requires teamwork to succeed, which helps develop leadership and discipline.</string>
    <string name="nav_contact">Apply Now</string>
    <string name="soc_desc">Football(Soccer) is a celebration of unity and talent. It\'s where strategy meets stamina, and every goal is a burst of joy. It teaches resilience, teamwork, and the pursuit of excellence, captivating hearts globally.a tapestry of cultures woven together by a shared passion. Each match is a dance of coordination and athleticism, inspiring dreams and celebrating collective effort</string>
    <string name="bat_desc">Badminton is a fun, active sport which is an easy game to practice with few painless rules. It boosts up your muscles, adds strength to the muscles, improves blood flow rate and the benefits are endless.</string>
    <string name="vol_desc">Volleyball is a fast-paced sport, and you have plenty of opportunities to improve your forearm/eye and hand/eye coordination. You Get to Play Offense and Defense. While volleyball does have set positions, every player on the court has to be good at several things.</string>
    <string name="throw_desc">The physical constant movement in throwball builds the muscles of lower as well as upper body. The constant use of arms and legs makes it a full body workout. Working in a team together improves mental health, reduces stress and improves self confidence.</string>
    <string name="cric_tym">05.00am -10.00am \n 04.00pm-09.00pm</string>
    <string name="bat_tym">05.00am -10.00am \n 04.00pm-09.00pm</string>
    <string name="vol_tym">07.00am-12.00pm\n 03.00pm -06.00pm</string>
    <string name="throw_tym">06.00am -09.00am \n 05.00pm-10.00pm</string>
    <string name="soc_tym">07.00am-12.00pm\n 03.00pm -06.00pm</string>
    <string name="hock_tym">06.00am -09.00am \n 05.00pm-10.00pm</string>
    <string name="coach">Coach</string>
    <string name="coach_details">Coach Details</string>
    <string name="contact">Contact Form</string>


    <string name="vino_sk"> •Android Development: AndroidStudio. \n  •DBMS Languages: SQL,Hadoop Hive, Pig.  \n •Programming Language: Python,Java. \n •Web Technologies: HTML, CSS,JavaScript, Basic of   PHP,Node JS. \n• Flexibility and Adaptability to work in any environment. \n • Quick and Easy Problem-Solving capability. \n • Enthusiastic to learn and adapt new skills as well as Responsibilities.</string>


</resources>