<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginScreen"
    android:gravity="center"
>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:text="@string/h_login"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/l_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ph_no" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
    android:id="@+id/err_mail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:visibility="invisible"
    android:text="@string/error_mail"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextColor="@color/Red"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/l_passwd"
            android:layout_width="match_parent"
            android:maxLength="10"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/err_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/error_pass"
        />
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"/>
        <Button
            android:id="@+id/l_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/Blue"
            android:textStyle="bold"
            android:text="@string/h_sigin"/>
    </LinearLayout>
</LinearLayout>