<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignupScreen"
    android:gravity="center_vertical"
    >
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h_sigin"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/s_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/s_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age" />
</com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:id="@+id/radio_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_gender"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/s_r_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/s_r_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/s_r_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Other"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextColor="@color/Red">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/s_phone"
            android:layout_width="match_parent"
            android:maxLength="10"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/ph_no"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/s_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/err_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_mail"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextColor="@color/Red"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/s_pwd"
            android:layout_width="match_parent"
            android:maxLength="10"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/err_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_pass"
        />

    <Button
        android:id="@+id/s_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_btn_signup" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_user"/>

        <Button
            android:id="@+id/s_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_login"
            android:textColor="@color/Blue"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>