<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact_form"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="45dp"
        android:layout_marginBottom="10dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age" />
    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:id="@+id/radio_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_gender"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/c_r_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/c_r_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/c_r_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Other"/>
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/c_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity"
        android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_phone"
            android:layout_width="match_parent"
            android:maxLength="10"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/ph_no"
            android:enabled="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/c_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn"/>


</LinearLayout>