<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:padding="15dp">
<!-- Cricket       -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/c"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginVertical="15dp"
            app:cardElevation="55px"
            app:cardCornerRadius="15px"
            >
            <ImageView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cricket_bg"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/Sp_cricket"/>

            <Button
                android:id="@+id/nav_cricket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:text="Explore"/>
        </com.google.android.material.card.MaterialCardView>
<!--        Soccer-->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginVertical="15dp"
            app:cardElevation="15px"
            app:cardCornerRadius="10px">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/soccer_bg"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/Sp_soccer"/>

                <Button
                    android:id="@+id/nav_soccer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:text="Explore"/>
        </com.google.android.material.card.MaterialCardView>
<!--        Hockey-->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginVertical="15dp"
            app:cardElevation="15px"
            app:cardCornerRadius="10px"
            android:background="@drawable/cricket_bg">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/Sp_hockey"/>

            <Button
                android:id="@+id/nav_hockey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:text="Explore"/>
        </com.google.android.material.card.MaterialCardView>
<!--        Throwball-->
        <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginVertical="15dp"
        app:cardElevation="15px"
        app:cardCornerRadius="10px"
        android:background="@drawable/cricket_bg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/Sp_throwball"/>

        <Button
            android:id="@+id/nav_throwball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="Explore"/>
        </com.google.android.material.card.MaterialCardView>
<!--        Badminton-->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginVertical="15dp"
            app:cardElevation="15px"
            app:cardCornerRadius="10px"
            android:background="@drawable/cricket_bg">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/Sp_badminton"/>

            <Button
                android:id="@+id/nav_badminton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:text="Explore"/>
        </com.google.android.material.card.MaterialCardView>
<!--        VolleyBall-->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginVertical="15dp"
            app:cardElevation="15px"
            app:cardCornerRadius="10px"
            android:background="@drawable/cricket_bg">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/Sp_volleyball"/>

            <Button
                android:id="@+id/nav_volleyball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:text="Explore"/>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>



</ScrollView>