<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".Activity_Cricket">
    <include
        layout="@layout/appbar"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:gravity="center_vertical"
    android:background="@drawable/custom_ui"
    android:orientation="vertical"

>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sp_cricket"
            android:textStyle="bold"
            android:textColor="@color/Dark_blue"
            android:layout_margin="5dp"
            android:textSize="55sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cric_desc"
            android:justificationMode="inter_word"
            android:layout_margin="5dp"
            android:textColor="@color/Dark_blue"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coach_details"
            android:layout_margin="5dp"
            android:textColor="@color/Dark_blue"
            android:textStyle="bold"
            android:textSize="35sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            >
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:src="@drawable/coach_vinoth"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="D. Vinoth"
                            android:textStyle="bold"
                            android:textSize="45dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/coach"
                            android:textStyle="italic"
                            android:textSize="15sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Vice Captain of Tamilnadu T20 League 2020"
                            android:textSize="15dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="7dp"

                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:src="@drawable/coach_bk"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Balaji Kumar"
                            android:textStyle="bold"
                            android:textSize="45dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/coach"
                            android:textStyle="italic"
                            android:textSize="15dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Captain of Tamilnadu T20 League 2022"
                            android:textSize="15dp"/>
                    </LinearLayout>
                </LinearLayout>


            </HorizontalScrollView>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Photos"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textColor="@color/Dark_blue"
            android:textSize="35dp"/>
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:src="@drawable/cric1"
                    android:layout_marginRight="25dp"/>
                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:src="@drawable/cric2"
                    android:layout_marginRight="25dp"/>
                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:src="@drawable/cric3"/>
            </LinearLayout>
        </HorizontalScrollView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Timings"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textColor="@color/Dark_blue"
            android:textSize="35dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cric_tym"
            android:textColor="@color/Dark_blue"
            android:textSize="15dp"/>
        <Button
            android:id="@+id/a_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_contact"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>